      and added a grayscale gradient of colors. Capitalized all color names.
    - Implemented snap-to-guides
    - Fixed the stencils which went out of their bounding-boxes, now they don't.

(Max Judin)
12/25/2000
    - Implemented an options dialog.

(Dave Marotti)
12/25/2000
    - Damn I suck, working on Christmas :(  Oh well, gotta do something while the
      food is cooking.
    - Created a new base stencils type, Kivio1DStencil, which can be used to make
      connector stencils which need width.  It is going to deprecate
      KivioBaseConnectorStencil and I will remove that class in the future.
    - Made KivioBaseTargetStencil easier to use.
    - Added tkmath.h.  It contains vector functions and classes and a few other
      math related functions like a line-collision detection routine which allows
      for a threshold.
    - Modified straight_connector to use Kivio1DStencil as it's parent class.
    - Unified the handle drawing code.  Now it's part of the KivioPainter classes.
      Start points are drawn with a plus in the box, endpoints are drawn with an
      x in the box, connectable points are drawn with a smaller box inside the
      box, and others are just plain green. When connected, they turn red.

(Dave Marotti)
12/26/2000
    - The wheel-event now causes the page to move up and down instead of zooming
      in and out.

(Dave Marotti)
01/14/2001
    - Started work on the protection dialog box
    - Deletion protection works

(Dave Marotti)
01/18/2001
    - Width/Height protection now works.
    - Little pictures of padlocks are now drawn in place of resize handles when
      protected.
      
(Dave Marotti)
01/23/2001
    - Width/height/x/y/deletion protection works, there are some flaws though.
      If you protect something, then group it, things can act funny when you
      move or resize the group.

(Dave Marotti)
02/04/2001
    - Below 50% zoom, the targets are no longer drawn
    - Added a text handle to connector stencils