@@ -1,0 +1,301 @@
+<!DOCTYPE UI><UI>
+<class>ExportPageDialogBase</class>
+<widget>
+    <class>QDialog</class>
+    <property stdset="1">
+        <name>name</name>
+        <cstring>ExportPageDialogBase</cstring>
+    </property>
+    <property stdset="1">
+        <name>geometry</name>
+        <rect>
+            <x>0</x>
+            <y>0</y>
+            <width>186</width>
+            <height>215</height>
+        </rect>
+    </property>
+    <property stdset="1">
+        <name>caption</name>
+        <string>Export Page</string>
+    </property>
+    <property stdset="1">
+        <name>baseSize</name>
+        <size>
+            <width>0</width>
+            <height>0</height>
+        </size>
+    </property>
+    <widget>
+        <class>QLabel</class>
+        <property stdset="1">
+            <name>name</name>
+            <cstring>TextLabel2</cstring>
+        </property>
+        <property stdset="1">
+            <name>geometry</name>
+            <rect>
+                <x>10</x>
+                <y>120</y>
+                <width>50</width>
+                <height>20</height>
+            </rect>
+        </property>
+        <property stdset="1">
+            <name>text</name>
+            <string>Quality:</string>
+        </property>
+    </widget>
+    <widget>
+        <class>QLabel</class>
+        <property stdset="1">
+            <name>name</name>
+            <cstring>TextLabel3</cstring>
+        </property>
+        <property stdset="1">
+            <name>geometry</name>
+            <rect>
+                <x>10</x>
+                <y>150</y>
+                <width>40</width>
+                <height>20</height>
+            </rect>
+        </property>
+        <property stdset="1">
+            <name>text</name>
+            <string>Border:</string>
+        </property>
+    </widget>
+    <widget>
+        <class>QButtonGroup</class>
+        <property stdset="1">
+            <name>name</name>
+            <cstring>ButtonGroup1</cstring>
+        </property>
+        <property stdset="1">
+            <name>geometry</name>
+            <rect>
+                <x>10</x>
+                <y>0</y>
+                <width>170</width>
+                <height>110</height>
+            </rect>
+        </property>
+        <property stdset="1">
+            <name>title</name>
+            <string>Export</string>
+        </property>
+        <widget>
+            <class>QRadioButton</class>
+            <property stdset="1">
+                <name>name</name>
+                <cstring>m_radioFullPage</cstring>
+            </property>
+            <property stdset="1">
+                <name>geometry</name>
+                <rect>
+                    <x>10</x>
+                    <y>20</y>
+                    <width>94</width>
+                    <height>20</height>
+                </rect>
+            </property>
+            <property stdset="1">
+                <name>text</name>
+                <string>&amp;All Stencils</string>
+            </property>
+            <property stdset="1">
+                <name>buttonGroupId</name>
+                <number>1</number>
+            </property>
+            <property stdset="1">
+                <name>checked</name>
+                <bool>true</bool>
+            </property>
+            <property>
+                <name>toolTip</name>
+                <string>Export all stencils on the current page</string>
+            </property>
+            <property>
+                <name>whatsThis</name>
+                <string>&lt;b&gt;All Stencils&lt;/b&gt;&lt;br&gt;
+This will cause the entire page to be exported out to the file.  This means that &lt;i&gt;all&lt;/i&gt; stencils will be exported to file.</string>
+            </property>
+        </widget>
+        <widget>
+            <class>QRadioButton</class>
+            <property stdset="1">
+                <name>name</name>
+                <cstring>m_radioSelectedStencils</cstring>
+            </property>
+            <property stdset="1">
+                <name>geometry</name>
+                <rect>
+                    <x>10</x>
+                    <y>40</y>
+                    <width>120</width>
+                    <height>20</height>
+                </rect>
+            </property>
+            <property stdset="1">
+                <name>text</name>
+                <string>&amp;Selected Stencils</string>
+            </property>
+            <property>
+                <name>toolTip</name>
+                <string>Export the selected stencils on the current page</string>
+            </property>
+            <property>
+                <name>whatsThis</name>
+                <string>&lt;b&gt;Selected Stencils&lt;/b&gt;&lt;br&gt;
+Export only the selected stencils to file.</string>
+            </property>
+        </widget>
+        <widget>
+            <class>QCheckBox</class>
+            <property stdset="1">
+                <name>name</name>
+                <cstring>m_checkCrop</cstring>
+            </property>
+            <property stdset="1">
+                <name>geometry</name>
+                <rect>
+                    <x>10</x>
+                    <y>80</y>
+                    <width>150</width>
+                    <height>20</height>
+                </rect>
+            </property>
+            <property stdset="1">
+                <name>text</name>
+                <string>Crop picture to edges</string>
+            </property>
+            <property stdset="1">
+                <name>enabled</name>
+                <bool>false</bool>
+            </property>
+            <property>
+                <name>toolTip</name>
+                <string>Don't export extra blank space to file</string>
+            </property>
+            <property>
+                <name>whatsThis</name>
+                <string>&lt;b&gt;Crop picture to edges&lt;/b&gt;&lt;br&gt;
+This will eliminate all blank portions of the drawing.  The picture will only be as large as the stencils it contains.  If your stencils are located in the upper right corner of the page, then only the upper right corner will be exported.</string>
+            </property>
+        </widget>
+    </widget>
+    <widget>
+        <class>QSpinBox</class>
+        <property stdset="1">
+            <name>name</name>
+            <cstring>m_spinQuality</cstring>
+        </property>
+        <property stdset="1">
+            <name>geometry</name>
+            <rect>
+                <x>60</x>
+                <y>120</y>
+                <width>120</width>
+                <height>23</height>
+            </rect>
+        </property>
+        <property stdset="1">
+            <name>maxValue</name>
+            <number>100</number>
+        </property>
+        <property stdset="1">
+            <name>value</name>
+            <number>100</number>
+        </property>
+        <property>
+            <name>toolTip</name>
+            <string>The higher the quality, the more space the file takes up</string>
+        </property>
+        <property>
+            <name>whatsThis</name>
+            <string>&lt;b&gt;Quality&lt;/b&gt;&lt;br&gt;
+Not all file formats use this.  But for those that do, this affects the quality of the image that gets exported.  100 is the maximum quality.  The higher the number, the better the picture looks.  The downside is the higher the number, the larger the filesize.</string>
+        </property>
+    </widget>
+    <widget>
+        <class>QSpinBox</class>
+        <property stdset="1">
+            <name>name</name>
+            <cstring>m_spinBorder</cstring>
+        </property>
+        <property stdset="1">
+            <name>geometry</name>
+            <rect>
+                <x>60</x>
+                <y>150</y>
+                <width>120</width>
+                <height>23</height>
+            </rect>
+        </property>
+        <property stdset="1">
+            <name>maxValue</name>
+            <number>10000</number>
+        </property>
+        <property>
+            <name>toolTip</name>
+            <string>An optional border of whitespace around the page, in pixels</string>
+        </property>
+        <property>
+            <name>whatsThis</name>
+            <string>&lt;b&gt;Border&lt;/b&gt;&lt;br&gt;
+Places a blank border around the edges of the image.  This can be used if for one reason or another, the stencils don't fit into the export page with a 0-pixel border (default).</string>
+        </property>
+    </widget>
+    <widget>
+        <class>QPushButton</class>
+        <property stdset="1">
+            <name>name</name>
+            <cstring>m_cancel</cstring>
+        </property>
+        <property stdset="1">
+            <name>geometry</name>
+            <rect>
+                <x>10</x>
+                <y>180</y>
+                <width>80</width>
+                <height>28</height>
+            </rect>
+        </property>
+        <property stdset="1">
+            <name>text</name>
+            <string>&amp;Cancel</string>
+        </property>
+        <property>
+            <name>whatsThis</name>
+            <string>&lt;b&gt;Cancel&lt;/b&gt;&lt;br&gt;
+Abort the page export.</string>
+        </property>
+    </widget>
+    <widget>
+        <class>QPushButton</class>
+        <property stdset="1">
+            <name>name</name>
+            <cstring>m_ok</cstring>
+        </property>
+        <property stdset="1">
+            <name>geometry</name>
+            <rect>
+                <x>100</x>
+                <y>180</y>
+                <width>80</width>
+                <height>28</height>
+            </rect>
+        </property>
+        <property stdset="1">
+            <name>text</name>
+            <string>&amp;Ok</string>
+        </property>
+        <property>
+            <name>whatsThis</name>
+            <string>&lt;b&gt;Ok&lt;/b&gt;&lt;br&gt;
+Export the page with the current settings.</string>
+        </property>
+    </widget>
+</widget>
+</UI>
